# UniDash

./: .coderabbit.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.dev.yml  package-lock.json  package.json  requirements-dev.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: branch-policy.yml  ci-python.yml  ci-web.yml  codeql.yml  docs-check.yml  docs-deploy.yml  generate-python-docs.yml  update-screenshots.yml
_bmad-output/: project-context.md
_bmad-output/analysis/: brainstorming-session-2026-01-07.md  legal-analysis-2026-01-09.md  market-research-2026-01-07.md
_bmad-output/implementation-artifacts/: 1-1-initialisation-du-projet-unidash.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2026-01-10.md  prd.md  sprint-status.yaml  (+3 more)
api/db/: pyproject.toml
api/db/src/unidash_db/: __init__.py
api/shared/: pyproject.toml
api/shared/src/unidash_shared/: __init__.py
api/shared/tests/: __init__.py  test_ci_workflows.py  test_doc_enforcement.py  test_github_standards.py  test_linters.py  test_precommit.py  test_project_structure.py  test_python_packages.py  test_starlight_config.py
docs/: astro.config.mjs  mkdocs.yml  package-lock.json  package.json
scripts/: generate-screenshots.mjs
web/: eslint.config.js  package-lock.json  package.json  vitest.config.ts
(+23 files in other folders)
