[project]
name = "unidash-shared"
version = "0.1.0"
description = "UniDash shared library - types, exceptions, and utilities"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Gabriel" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unidash_shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
target-version = ["py313"]
line-length = 88
